# swagger.json
@@ -85,6 +85,9 @@
     "/transfer": {
       "post": {
         "summary": "Transferir valores",
+        "security": [
+          { "bearerAuth": [] }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -102,9 +105,35 @@
           }
         },
         "responses": {
-          "200": { "description": "Transferência realizada com sucesso." },
-          "400": { "description": "Erro na transferência." }
+          "201": {
+            "description": "Transferência realizada com sucesso.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "from": { "type": "string" },
+                    "to": { "type": "string" },
+                    "amount": { "type": "number" },
+                    "date": { "type": "string", "format": "date-time" }
+                  }
+                }
+              }
+            }
+          },
+          "400": { "description": "Erro na transferência." },
+          "401": { "description": "Token não fornecido." },
+          "403": { "description": "Token inválido." }
         }
+      }
+    }
+    },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
